2002-12-22  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtk.override 
	(_wrap_gtk_text_view_get_location): Impl,
	patch from John Finlay, fixes 101714.
	(_wrap_gtk_text_view_get_line_at_y): Impl,
	patch from John Finlay, fixes 101716.
	(_wrap_gtk_text_view_get_line_yrange): Impl,
	patch from John Finlay, fixes 101720.	
	(_wrap_gtk_text_view_get_iter_at_location): Impl,
	patch from John Finlay, fixes 101722.
	
	* examples/pygtk-demo/demos/editable_cells.py: New demo.
	* examples/pygtk-demo/pygtk-demo.py: Rearrange code a bit.
	* examples/pygtk-demo/demos/*.py: Clean up a bit.

	* gtk/gtk.override
	(_wrap_gtk_tree_view_insert_column_with_attributes): If the first
	argument (position) is -1, the column will be inserted at the end
	of the list, there for the new position will be columns - 1. If
	the columns isn't 1, it will be inserted at the requested
	position. This makes this function work again.
	

2002-12-19  Johan Dahlin  <jdahlin@async.com.br>

        * gtk/gdk.override: Integrate patch by David I. Lehn, improves
        threading support, fixes #98380.
        
2002-12-18  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtk.override (_wrap_gtk_text_buffer_get_selection_bounds):
	Impl, based upon patch by John Finlay, fixes #101499.
	(_wrap_gtk_text_view_get_visible_rect): Impl, patch by John
	Finlay, fixes #101503.
	(_wrap_gtk_tree_view_get_visible_rect): Impl, patch by John
	Finlay, fixes #101505.
	(_wrap_gtk_tree_view_column_cell_get_size): Impl.

2002-12-17  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtk.defs (gtk_text_buffer_new): Add (default "NULL"), fixed
	#101490 (John Finlay).

	* gtk/gtk.override: ignore gtk_text_view_new.

	* gtk/gtk.defs (gtk_text_view_new_with_buffer): Add null-ok. 
	Fixes #101489 (John Finlay).

2002-12-11  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtk.override (_wrap_gtk_tree_view_get_cursor): Make the
	return value a bit more intelligent and only return what's requested.