@@ -81,21 +81,28 @@ else
   AC_MSG_RESULT(no)
 fi
 
+dnl get rid of the -export-dynamic stuff from the configure flags ...
+export_dynamic=`(./libtool --config; echo eval echo \\$export_dynamic_flag_spec) | sh`
+
 dnl glib
 AM_PATH_GLIB_2_0(glib_required_version,,[AC_MSG_ERROR(maybe you want the gtk-gnome-1-2 branch?)],gobject $extra_mods)
+GLIB_LIBS=`echo $GLIB_LIBS | sed -e "s/$export_dynamic//"`
 
 dnl atk
 PKG_CHECK_MODULES(ATK, atk >= atk_required_version,,[AC_MSG_ERROR(maybe you want the gtk-gnome-1-2 branch?)])
 AC_SUBST(ATK_CFLAGS)
 AC_SUBST(ATK_LIBS)
+ATK_LIBS=`echo $ATK_LIBS | sed -e "s/$export_dynamic//"`
 
 dnl pango
 PKG_CHECK_MODULES(PANGO, pango >= pango_required_version,,[AC_MSG_ERROR(maybe you want the gtk-gnome-1-2 branch?)])
 AC_SUBST(PANGO_CFLAGS)
 AC_SUBST(PANGO_LIBS)
+PANGO_LIBS=`echo $PANGO_LIBS | sed -e "s/$export_dynamic//"`
 
 dnl gtk+
 AM_PATH_GTK_2_0(gtk_required_version,,[AC_MSG_ERROR(maybe you want the gtk-gnome-1-2 branch?)],$extra_mods)
+GTK_LIBS=`echo $GTK_LIBS | sed -e "s/$export_dynamic//"`
 
 dnl libglade
 build_libglade=false
@@ -105,6 +112,7 @@ PKG_CHECK_MODULES(LIBGLADE, libglade-2.0 >= libglade_required_version,
 AC_SUBST(LIBGLADE_CFLAGS)
 AC_SUBST(LIBGLADE_LIBS)
 AM_CONDITIONAL(BUILD_LIBGLADE, $build_libglade)
+LIBGLADE_LIBS=`echo $LIBGLADE_LIBS | sed -e "s/$export_dynamic//"`
 
 dnl gtkgl
 build_gtkgl=false
@@ -114,6 +122,7 @@ PKG_CHECK_MODULES(GTKGL, gtkgl-2.0 >= gtkgl_required_version,
 AC_SUBST(GTKGL_CFLAGS)
 AC_SUBST(GTKGL_LIBS)
 AM_CONDITIONAL(BUILD_GTKGL, $build_gtkgl)
+GTKGL_LIBS=`echo $GTKGL_LIBS | sed -e "s/$export_dynamic//"`
 
 
 AC_ARG_ENABLE(numpy,
