@@ -1,3 +1,9 @@
+2002-12-23  James Henstridge  <james@daa.com.au>
+
+	* autogen.sh (AUTOMAKE): use automake-1.7 in preference to 1.6.
+
+	* configure.in (GLIB_LIBS): remove -export-dynamic from flags.
+
 2002-12-22  Johan Dahlin  <jdahlin@async.com.br>
 
 	* gtk/gtk.override 
